--- a/index.html
+++ b/index.html
@@ -1,23 +1,17 @@
-<!DOCTYPE html>
-<html lang="en" >
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>CodePen - Speech Recognition App #30days30submits #day-24</title>
+<title>Quick Voice change</title>
   <link rel="stylesheet" href="./style.css">
-
 </head>
 <body>
-<!-- partial:index.partial.html -->
-<section>
+ <section>
    <h1>Speech<br> Recognition</h1>
-   <p>Available In Chrome😎 Only</p>
+   <p>Available In Chrome Only</p>
    <div class="container">
      <div class="texts">
      </div>
    </div>
  </section>
-<!-- partial -->
   <script  src="./script.js"></script>
-
 </body>
 </html>
